--- a/client/src/components/style/header.css
+++ b/client/src/components/style/header.css
@@ -7,6 +7,8 @@
 /*h1 태그는 블록구조이다. display: inline으로 해결*/
 .header {
     border-bottom: 1px solid rgb(30, 30, 30);
+    width: 100%;
+    height: 80px;
 }
 
 .header .header-icon {
