--- a/client/src/components/style/profile.css
+++ b/client/src/components/style/profile.css
@@ -1,17 +1,34 @@
-#contents {
+#contents_profile {
     width: 100%;
     text-align: center;
 }
 
-#contents #wrapper {
+#contents_profile #wrapper {
     width: 600px;
     margin: auto;
+    text-align: left;
 }
 
-#contents #wrapper .my_feed {
+#contents_profile #wrapper .my_feed {
+    display: inline-block;
     width: 170px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 20px;
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+#contents_profile #wrapper .my_feed .my_image {
+    width: 170px;
     border: 1px solid gray;
+}
+
+#contents_profile #wrapper .my_feed .input_price {
+    width: 50px;
+    text-align: center;
+}
+
+#contents_profile #wrapper .my_feed .sell_button {
+    margin-left: 10px;
+    text-align: center;
 }
